<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    style="@style/default_activity_relative_layout"
    android:id="@+id/activity_update_info"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.UpdateInfo">

    <include layout="@layout/default_screen_settings"/>

...

        </LinearLayout>

        <!-- Submit button. -->
        <Button
            style="@style/default_button"
            android:id="@+id/submit_button"
            android:text="@string/submit"
            android:layout_marginTop="50dp"/>

        <!-- Return button. -->
        <Button
            style="@style/default_button"
...
