<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_food_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.FoodSearch"
    android:orientation="vertical">

    <SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:queryHint="Search for food..."
        android:iconifiedByDefault="false"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/gradient_background"
        android:padding="10dp"
        android:scrollbars="vertical"/>

    <include layout="@layout/navigation_bar" />

</LinearLayout>
